deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptob-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ptob-service
  template:
    metadata:
      labels:
        app: ptob-service
    spec:
      containers:
        - name: app
          image: ptob/ptob-service:0.0.4
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
