deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptob-service
spec:
  selector:
    app: ptob-service
  ports:
    - port: 80
      targetPort: 8080
