deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptob-web
spec:
  selector:
    app: ptob-web
  ports:
    - port: 80
      targetPort: 80
